# BoardingMcp-Server

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  docker-compose.yml  docker-database-config.yml  full_mcp_run.txt  langgraph.json  mypy.ini  pyproject.toml  requirements.txt  setup.py  setupcodes.py  step5_final.txt  step5_output.txt  test.py  test2.py
.claude/: CLAUDE.MD  settings.json  settings.local.json
.claude/agents/: ai_engineer.md  ai_researcher.md  code_reviewer.md  draft-scorer.md  exemplar-writer.md  (+3 more)
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.1.pckl.tmp  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.2.pckl.tmp  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: __init__.py  main.py  test_fuctions.py
boarding_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clients/: __init__.py  direct_api_client_manager.py
deployment/: build.sh  deploy.sh  docker-compose.prod.yml
docs/: ARCHITECTURE_V10.md  Broacsting - Sheet1.csv  Draft_test.xlsx  WhatsApp_Broadcasting_Agent_Documentation.docx  api.md  architecture.md  architecture_drafting_agent_v8.4.md  deployment.md  onboardingserver.md
mcp_servers/: direct_api_server.py  onboardserver.py  test_onboradingserver.py
models/: direct_api_delete_request.py  direct_api_patch_request.py  direct_api_post_request.py
research/: _check_colg.py  _run_benchmark_v2.py  _run_single_scenario.py  draft_app.py  drafting_app.py  generate_benchmark_draft.py  quadrant.py  run_10scenario_compare.py  run_claude_direct.py  run_commercial_test.py  run_compare_live.py  run_dealership_noamount.py  run_draft_benchmark.py  run_draft_live.py  run_dual_scenario_compare.py  run_injunction_test.py  run_lkb_3scenario.py  run_multi_scenario.py  run_pipeline_scenario.py  run_possession_compare.py  run_possession_test.py  run_review_benchmark.py  run_v5_compare.py  run_v7_dealership_bench.py  run_v8_compare.py  score_7_comparison.py  score_benchmark.py  score_comparison.py  test1.py  test_client.py  test_draft_output.py  websearch_tool.py
schemas/: CITATION_PACK.schema.json  COMPLIANCE_REPORT.schema.json  DRAFT_CONTEXT.schema.json  DRAFT_V1.schema.json  ERROR_REPORT.schema.json  EXPORT_OUTPUT.schema.json  FINAL_DRAFT.schema.json  LLM_CLASSIFY_OUTPUT.schema.json  LOCAL_RULES.schema.json  MASTER_FACTS.schema.json  PRAYER_PACK.schema.json  RESEARCH_BUNDLE.schema.json  TEMPLATE_PACK.schema.json  WORKFLOW_ROUTE.schema.json
scripts/: backup_db.sh  run_csv_broadcast.py  run_tests.sh  seed_verified_citations.py  setup_dev.sh  verified_citations_template.csv
tests/: conftest.py
(+981 files in other folders)
