# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boarding-mcp-server"
version = "0.1.0"
description = "MCP Server for Onboarding Management"
readme = "README.md"
authors = [
    { name = "Girish", email = "girish12n@gmail.com" }
]
# Limit Python so uv doesn't try to solve for 3.14+
requires-python = ">=3.10,<3.14"

dependencies = [
    # Web & Core
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "httpx",
    "aiohttp",

    # Database
    "sqlalchemy",
    "sqlmodel",
    "alembic",
    "psycopg2-binary",

    # Auth & Forms
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",

    # MCP / Agent Stack
    "fastmcp",
    "mcp",
    "langgraph",
    "langchain",
    "langchain-openai",
    "langchain-mcp-adapters",
    "copilotkit",
    "langgraph-cli[inmem]>=0.4.11",
    "nest_asyncio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "isort",
    "inline_snapshot",
    "inline-snapshot[black]",
]

test = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
boarding-server = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "config*"]
exclude = ["tests*", "*.tests", "*.tests.*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.workspace]
members = [
    "mcpserver",
]
